fixes #33. add in bootstrap-tagsinput as a frontend library to dynamically pull labels based on user's selection of videos

--- a/static/css/classifier_page.css
+++ b/static/css/classifier_page.css
@@ -30,12 +30,12 @@ h5 {
 }
 
 #video-select {
-    width: 300px;
+    width: 400px;
     margin-top: 40px;
 }
 
-#label-select {
-    width: 400px;
+#label_input {
+    width: 600px;
     margin-top: 40px;
 }
 
@@ -94,4 +94,8 @@ h5 {
 
 .item_evaluation_video{
     padding-left: 10px;
+}
+
+.label {
+    font-size: 100%
 }
