--- a/templates/index_video.html
+++ b/templates/index_video.html
@@ -12,7 +12,9 @@
             <th class="table_center">Labels</th>
             <th class="table_center">Labeling Jobs</th>
             <th class="table_center">Delete Video</th>
+<!--
             <th class="table_center">Download Video</th>
+-->
         </tr>
         </thead>
         <tbody>
@@ -42,8 +44,7 @@
                             </form>
                         </div>
 
-                        <p class="item_label_frame_count"> Labeled Frame Count: {{label.labeled_frame}} (duplicates
-                            possible)</p>
+                        <p class="item_label_frame_count"> Labeled Frame Count: {{label.labeled_frame}}</p>
                         <form class="item_label_form item_label_form_edit form-inline" action="../label/edit"
                               method="POST">
                             <input hidden name="label_id" value="{{label.id}}">
@@ -76,6 +77,7 @@
                     <button class="btn btn-danger" type="submit">Delete Video</button>
                 </form>
             </th>
+<!--
             <th class="table_center table_download">
                 Export the Labeled Video
                 (this will be in pascal format, you will receive a zip ball containing both images (under JPEGImages folder) and annotations (under Annotations folder))
@@ -84,8 +86,8 @@
                     <input hidden name="video_id" value="{{video.id}}">
                     <button class="btn" type="submit">Export Video</button>
                 </form>
-
             </th>
+-->
         </tr>
         {% endfor%}
         </tbody>
@@ -102,11 +104,13 @@
             <label for="fileupload">Choose the file:</label>
             <input id="fileupload" type="file" name="file" data-url="upload" multiple class="form-control">
         </div>
+<!-- 
         <div class="checkbox form-group">
             <label><input type="checkbox" name="labeled" class="form-control" value="" id="video_labeled">This is a
                 labeled sample</label>
             <p>If true, it should be in pascal label format and organized as a zip ball</p>
         </div>
+ -->
     </form>
 
     <div id="upload">
