--- a/templates/login.html
+++ b/templates/login.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Login</title>
+    <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/nav.css') }}">
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/login.css') }}">
